syntax = "proto3";
import "book_message.proto";

package bookstore;

option java_package = "com.guagua.proto.bookstore";
option java_multiple_files = true;


message CreateBookRequest {
  Book book = 1;
}

message CreateBookResponse {
  Book book = 1;
}

service BookService {
  rpc addBook(CreateBookRequest) returns (CreateBookResponse);
}