syntax = "proto3";
import "book_message.proto";

package bookstore;


option java_package = "com.guagua.proto.bookstore";
option java_multiple_files = false;

message BookStore {
  string name = 1;
  repeated Book book = 2;
}